1，优化导航样式以及顺序 2，添加play页面，并且适配移动端 3，游戏功能demo

--- a/gray-sprunki/index.html
+++ b/gray-sprunki/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../style.css?v=09301430">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1522458956946675"
      crossorigin="anonymous"></script>
+     <script src="../tailwind.js"></script>
     <style>
         /* CSS styles remain the same as in the previous version */
         .version-comparison {
@@ -80,14 +81,14 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="../"><i class="fas fa-music"></i> Sprunki Incredibox
+                    <a href="../"><i class="fas fa-music"></i> Sprunki Incredibox</a>
                 </div>
                 <ul class="nav-links">
                     <li><a href="../#play-now"><i class="fas fa-play"></i> Play Sprunki</a></li>
-                    <li><a href="./#play-gray"><i class="fas fa-play"></i> Play Gray Sprunki</a></li>
-                    <li><a href="#about"><i class="fas fa-info-circle"></i> About</a></li>
-                    <li><a href="#characters"><i class="fas fa-users"></i> Characters</a></li>
-                    <li><a href="#creators"><i class="fas fa-star"></i> Creators</a></li>
+                    <li><a href="../neesterversal-v3-incredibox/"><i class="fas fa-play"></i> Neesterversal V3</a></li>
+                    <li><a href="./#play-gray"><i class="fas fa-play"></i> Gray Sprunki</a></li>
+                    <li><a href="../sprunki-oc/"><i class="fas fa-play"></i> Sprunki OC</a></li>
+                    <li><a href="../sprunki-characters/"><i class="fas fa-users"></i> Characters</a></li>
                 </ul>
                 <div class="burger">
                     <div class="line1"></div>
