--- a/neesterversal-v3-incredibox/index.html
+++ b/neesterversal-v3-incredibox/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../style.css?v=09301430">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1522458956946675"
      crossorigin="anonymous"></script>
+     <script src="../tailwind.js"></script>
     <style type="text/css">
         .related-games {
             background-color: #f5f5f5;
@@ -67,11 +68,11 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="../"><i class="fas fa-music"></i> Sprunki Incredibox
+                    <a href="../"><i class="fas fa-music"></i> Sprunki Incredibox</a>
                 </div>
                 <ul class="nav-links">
                     <li><a href="../#play-now"><i class="fas fa-play"></i> Play Sprunki</a></li>
-                    <li><a href="./#play-neesterversal"><i class="fas fa-play"></i> Play Neesterversal</a></li>
+                    <li><a href="./#play-neesterversal"><i class="fas fa-play"></i> Neesterversal V3</a></li>
                     <li><a href="../gray-sprunki/"><i class="fas fa-play"></i> Gray Sprunki</a></li>
                     <li><a href="../sprunki-oc/"><i class="fas fa-play"></i> Sprunki OC</a></li>
                     <li><a href="../sprunki-characters/"><i class="fas fa-users"></i> Characters</a></li>
