--- a/sprunki-characters/index.html
+++ b/sprunki-characters/index.html
@@ -22,14 +22,14 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="../" class="flex center items-center"><i class="fas mr-2 fa-music hidden sm:block"></i> Sprunki Incredibox
+                    <a href="../"><i class="fas fa-music"></i> Sprunki Incredibox</a>
                 </div>
                 <ul class="nav-links">
-                    <li><a href="#play-now" title="Play Sprunki"><i class="fas fa-play"></i> Sprunki</a></li>
-                  
-                    <li><a href="../neesterversal-v3-incredibox/" title="Play Neesterversal"><i class="fas fa-play"></i> Neesterversal V3</a></li>
-                    <li><a href="../gray-sprunki/" title="Play Gray Sprunki"><i class="fas fa-play"></i> Gray Sprunki</a></li>
-                    <li><a href="../sprunki-oc/" title="Play Sprunki OC"><i class="fas fa-play"></i> Sprunki OC</a></li>
+                    <li><a href="../#play-now"><i class="fas fa-play"></i> Play Sprunki</a></li>
+                    <li><a href="../neesterversal-v3-incredibox/"><i class="fas fa-play"></i> Neesterversal V3</a></li>
+                    <li><a href="../gray-sprunki/"><i class="fas fa-play"></i> Gray Sprunki</a></li>
+                    <li><a href="../sprunki-oc/"><i class="fas fa-play"></i> Sprunki OC</a></li>
+                    <li><a href="./#characters"><i class="fas fa-users"></i> Characters</a></li>
                 </ul>
                 <div class="burger">
                     <div class="line1"></div>
