--- a/sprunki-oc/index.html
+++ b/sprunki-oc/index.html
@@ -81,15 +81,14 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="../" class="flex center items-center"><i class="fas mr-2 fa-music hidden sm:block"></i> Sprunki Incredibox
+                    <a href="../"><i class="fas fa-music"></i> Sprunki Incredibox</a>
                 </div>
                 <ul class="nav-links">
-                    <li><a href="#play-now" title="Play Sprunki OC"><i class="fas fa-play"></i> Sprunki OC</a></li>
-                    <li><a href="../sprunki-characters/"><i class="fas fa-play"></i> characters</a></li>
-                    <li><a href="../neesterversal-v3-incredibox/" title="Play Neesterversal"><i class="fas fa-play"></i>
-                            Neesterversal V3</a></li>
-                    <li><a href="../gray-sprunki/" title="Play Gray Sprunki"><i class="fas fa-play"></i> Gray Sprunki</a></li>
-                    <li><a href="../" title="Play Sprunki"><i class="fas fa-play"></i> Sprunki</a></li>
+                    <li><a href="../#play-now"><i class="fas fa-play"></i> Play Sprunki</a></li>
+                    <li><a href="../neesterversal-v3-incredibox/"><i class="fas fa-play"></i> Neesterversal V3</a></li>
+                    <li><a href="../gray-sprunki/"><i class="fas fa-play"></i> Gray Sprunki</a></li>
+                    <li><a href="./#play-now"><i class="fas fa-play"></i> Sprunki OC</a></li>
+                    <li><a href="../sprunki-characters/"><i class="fas fa-users"></i> Characters</a></li>
                 </ul>
                 <div class="burger">
                     <div class="line1"></div>
@@ -108,19 +107,6 @@
         </div>
     </section>
 
-    <section class="about-sprunki" id="about">
-        <div class="container">
-            <h2>What is Sprunki OC?</h2>
-            <p>Sprunki OC is a fan-made mod within the Incredibox universe that offers a fresh take on music creation
-                with an emphasis on originality and unique characters. Sprunki OC allows players to craft one-of-a-kind
-                beats by combining character-driven soundscapes, making it perfect for those who want to push the
-                boundaries of their musical creativity.</p>
-            <p>This mod, known as Sprunki Incredibox OC, takes the base mechanics of Incredibox and builds on them with
-                distinctive new characters and visual elements, offering players an elevated and personalized music
-                experience.</p>
-        </div>
-    </section>
-
     <section id="play-now" class="play-area">
         <div class="container">
             <h2>Play Sprunki OC Now</h2>
@@ -136,6 +122,19 @@
                     </a>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="about-sprunki" id="about">
+        <div class="container">
+            <h2>What is Sprunki OC?</h2>
+            <p>Sprunki OC is a fan-made mod within the Incredibox universe that offers a fresh take on music creation
+                with an emphasis on originality and unique characters. Sprunki OC allows players to craft one-of-a-kind
+                beats by combining character-driven soundscapes, making it perfect for those who want to push the
+                boundaries of their musical creativity.</p>
+            <p>This mod, known as Sprunki Incredibox OC, takes the base mechanics of Incredibox and builds on them with
+                distinctive new characters and visual elements, offering players an elevated and personalized music
+                experience.</p>
         </div>
     </section>
 
