--- a/download/index.html
+++ b/download/index.html
@@ -19,14 +19,14 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="../"><i class="fas fa-music"></i> Sprunki Incredibox
+                    <a href="../"><i class="fas fa-music"></i> Sprunki Incredibox</a>
                 </div>
                 <ul class="nav-links">
-                    <li><a href="https://sunoai.ai/welcome/sprunkiw" target="_blank"><i class="fas fa-music"></i> AI Music</a></li>
-                    <li><a href="#play-now"><i class="fas fa-play"></i> Play Now</a></li>
-                    <li><a href="./"><i class="fas fa-download"></i> Download</a></li>
-                    <li><a href="../#about"><i class="fas fa-info-circle"></i> About</a></li>
-                    <li><a href="../#features"><i class="fas fa-star"></i> Features</a></li>
+                    <li><a href="../#play-now"><i class="fas fa-play"></i> Play Sprunki</a></li>
+                    <li><a href="../neesterversal-v3-incredibox/"><i class="fas fa-play"></i> Neesterversal V3</a></li>
+                    <li><a href="../gray-sprunki/"><i class="fas fa-play"></i> Gray Sprunki</a></li>
+                    <li><a href="../sprunki-oc/"><i class="fas fa-play"></i> Sprunki OC</a></li>
+                    <li><a href="../sprunki-characters/"><i class="fas fa-users"></i> Characters</a></li>
                 </ul>
                 <div class="burger">
                     <div class="line1"></div>
