--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                     <a href="./" class="flex center items-center"><i class="fas mr-2 fa-music hidden sm:block"></i> Sprunki Incredibox
                 </div>
                 <ul class="nav-links">
+                    <li><a href="./play/"><i class="fas fa-play"></i> Play Sprunki</a></li>
                     <li><a href="./download/"><i class="fas fa-download"></i> Download</a></li>
                     <li><a href="./neesterversal-v3-incredibox/" title="Play Neesterversal"><i class="fas fa-play"></i> Neesterversal V3</a></li>
                     <li><a href="./gray-sprunki/" title="Play Gray Sprunki"><i class="fas fa-play"></i> Gray Sprunki</a></li>
