--- a/play/index.html
+++ b/play/index.html
@@ -10,12 +10,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="https://s.sprunkiincredibox.com/img/icon/favicon-16x16.png">
     <link rel="icon" href="/favicon.ico"/>
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="canonical" href="https://sprunkiincredibox.com/play"/>
+    <link rel="canonical" href="https://sprunkiincredibox.com/play/"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="../tailwind.js"></script>
     <link rel="stylesheet" href="../style.css?v=09301430">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1522458956946675"
-     crossorigin="anonymous"></script>
     <style type="text/css">
         .related-games {
             background-color: #f5f5f5;
@@ -483,6 +481,15 @@
         }
     </script>
     <div style="display:none">
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-2XQY73C38G"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-2XQY73C38G');
+        </script>
         <script defer data-domain="sprunkiincredibox.com" src="https://click.pageview.click/js/script.js"></script>
     </div>
 </body>
