add sdimg.ai link

--- a/index.html
+++ b/index.html
@@ -365,6 +365,7 @@
                 <li><a href="./ko/" hreflang="ko">한국어</a></li>
                 <li><a href="./ru/" hreflang="ru">Русский</a></li>
                 <li><a href="./pt/" hreflang="pt">Português</a></li>
+                <li><a href="https://sdimg.ai/" target="_blank">Stable Diffusion 3.5</a></li>
             </ul>
         </div>
     </footer>
