--- a/index.html
+++ b/index.html
@@ -160,6 +160,11 @@
                     <h3>Sprunki Abgerny</h3>
                     <p>Explore new sounds and characters!</p>
                 </a>
+                <a href="./fnf/" class="game-card">
+                    <img src="./img/fnf.jpg" alt="Sprunki fnf">
+                    <h3>Sprunki fnf</h3>
+                    <p>Experience the rhythm of Friday Night Funkin'!</p>
+                </a>
             </div>
         </div>
     </section>
