--- a/play/index.html
+++ b/play/index.html
@@ -12,7 +12,8 @@
     <link rel="icon" href="/favicon.ico"/>
     <link rel="manifest" href="/manifest.json">
     <link rel="canonical" href="https://sprunkiincredibox.com/play/"/>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="../tailwind.js"></script>
+    <link rel="stylesheet" href="../tailwind.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     
     <!-- PWA相关meta标签 -->
@@ -77,7 +78,7 @@
                         <img src="https://s.sprunkiincredibox.com/img/neesterversal.png" alt="Neesterversal v3 Incredibox" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold mb-2 text-red-700">Neesterversal v3 Incredibox</h3>
-                            <p class="text-gray-600">A Musical Journey with 20 Unique Neesters!</p>
+                            <p class="text-gray-600">A musical journey with 20 unique Neesters!</p>
                         </div>
                     </a>
                     <a href="../gray-sprunki/" class="bg-white rounded-2xl overflow-hidden shadow-lg transition duration-300 hover:shadow-2xl hover:-translate-y-2">
@@ -92,6 +93,27 @@
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold mb-2 text-red-700">Sprunki OC</h3>
                             <p class="text-gray-600">Create music with original characters!</p>
+                        </div>
+                    </a>
+                    <a href="../dandys-world/" class="bg-white rounded-2xl overflow-hidden shadow-lg transition duration-300 hover:shadow-2xl hover:-translate-y-2">
+                        <img src="../img/dandys-world.png" alt="Sprunki Dandy's World" class="w-full h-48 object-cover">
+                        <div class="p-6">
+                            <h3 class="text-2xl font-semibold mb-2 text-red-700">Dandy's World</h3>
+                            <p class="text-gray-600">Mix beats in a creepy yet captivating world!</p>
+                        </div>
+                    </a>
+                    <a href="../abgerny/" class="bg-white rounded-2xl overflow-hidden shadow-lg transition duration-300 hover:shadow-2xl hover:-translate-y-2">
+                        <img src="../img/abgerny.png" alt="Sprunki Abgerny" class="w-full h-48 object-cover">
+                        <div class="p-6">
+                            <h3 class="text-2xl font-semibold mb-2 text-red-700">Sprunki Abgerny</h3>
+                            <p class="text-gray-600">Explore new sounds and characters!</p>
+                        </div>
+                    </a>
+                    <a href="../fnf/" class="bg-white rounded-2xl overflow-hidden shadow-lg transition duration-300 hover:shadow-2xl hover:-translate-y-2">
+                        <img src="../img/fnf.jpg" alt="Sprunki fnf" class="w-full h-48 object-cover">
+                        <div class="p-6">
+                            <h3 class="text-2xl font-semibold mb-2 text-red-700">Sprunki fnf</h3>
+                            <p class="text-gray-600">Experience the rhythm of Friday Night Funkin'!</p>
                         </div>
                     </a>
                 </div>
