--- a/index.html
+++ b/index.html
@@ -301,6 +301,22 @@
                         <h3 class="text-2xl font-semibold mb-4 text-red-700">Is Sprunki Incredibox available on mobile devices?</h3>
                         <p class="text-gray-700">Yes! Sprunki Incredibox is designed to work seamlessly on both desktop and mobile devices. You can create sprunky beats on the go, anytime, anywhere!</p>
                     </div>
+                    <div class="bg-gradient-to-r from-gray-50 to-gray-100 p-8 rounded-2xl shadow-md transition duration-300 hover:shadow-xl">
+                        <h3 class="text-2xl font-semibold mb-4 text-red-700">How often does Sprunki Incredibox update with new content?</h3>
+                        <p class="text-gray-700">We're constantly working on new sprunky surprises! We typically release new Sprunki characters, sounds, and modes every few months. Keep an eye on our updates to catch all the latest Sprunki goodness!</p>
+                    </div>
+                    <div class="bg-gradient-to-r from-gray-50 to-gray-100 p-8 rounded-2xl shadow-md transition duration-300 hover:shadow-xl">
+                        <h3 class="text-2xl font-semibold mb-4 text-red-700">Are there any hidden features or Easter eggs in Sprunki Incredibox?</h3>
+                        <p class="text-gray-700">Oh, absolutely! We love hiding little surprises throughout Sprunki Incredibox. Keep experimenting with different combinations and you might unlock some truly wild and wacky secret features!</p>
+                    </div>
+                    <div class="bg-gradient-to-r from-gray-50 to-gray-100 p-8 rounded-2xl shadow-md transition duration-300 hover:shadow-xl">
+                        <h3 class="text-2xl font-semibold mb-4 text-red-700">Is Sprunki Incredibox suitable for children?</h3>
+                        <p class="text-gray-700">Absolutely! Sprunki Incredibox is fun for all ages. It's a great tool for introducing children to rhythm, composition, and the joy of music creation in a playful, engaging way.</p>
+                    </div>
+                    <div class="bg-gradient-to-r from-gray-50 to-gray-100 p-8 rounded-2xl shadow-md transition duration-300 hover:shadow-xl">
+                        <h3 class="text-2xl font-semibold mb-4 text-red-700">How did Sprunki Incredibox get its name?</h3>
+                        <p class="text-gray-700">The name "Sprunki" comes from combining "spunky" and "funky" - two words that perfectly capture the essence of our quirky, energetic take on Incredibox. It's all about bringing that extra spark of fun to beat-making!</p>
+                    </div>
                 </div>
             </div>
         </section>
