--- a/mod/index.html
+++ b/mod/index.html
@@ -13,10 +13,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="https://s.sprunkiincredibox.com/img/icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://s.sprunkiincredibox.com/img/icon/favicon-16x16.png">
     <link rel="icon" href="/favicon.ico"/>
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body class="bg-gradient-to-r from-gray-100 to-gray-200 text-gray-800 font-sans leading-relaxed">
-    <header class="bg-gradient-to-r from-red-800 to-red-900 text-white py-6 fixed top-0 left-0 w-full z-50 shadow-lg">
+    <header class="bg-gradient-to-r from-red-800 to-red-900 text-white py-4 fixed top-0 left-0 w-full z-50 shadow-lg">
         <div class="container mx-auto px-4">
             <nav class="flex justify-between items-center">
                 <div class="logo">
@@ -24,33 +26,34 @@
                         <i class="fas fa-music mr-2 hidden sm:block"></i> Sprunki Incredibox</a>
                 </div>
                 <ul class="nav-links hidden md:flex space-x-6">
-                    <li><a href="../play/" class="hover:text-yellow-400 transition duration-300"><i
-                                class="fas fa-play mr-1"></i> Play Sprunki</a></li>
-                    <li><a href="../download/" class="hover:text-yellow-400 transition duration-300"><i
-                                class="fas fa-download mr-1"></i> Download</a></li>
-                    <li><a href="../neesterversal-v3-incredibox/" class="hover:text-yellow-400 transition duration-300"
-                            title="Play Neesterversal"><i class="fas fa-play mr-1"></i> Neesterversal V3</a></li>
-                    <li><a href="../gray-sprunki/" class="hover:text-yellow-400 transition duration-300"
-                            title="Play Gray Sprunki"><i class="fas fa-play mr-1"></i> Gray Sprunki</a></li>
-                    <li><a href="../sprunki-oc/" class="hover:text-yellow-400 transition duration-300"
-                            title="Play Sprunki OC"><i class="fas fa-play mr-1"></i> Sprunki OC</a></li>
-                    <li><a href="../sprunki-characters/" class="hover:text-yellow-400 transition duration-300"
-                            title="Sprunki Characters"><i class="fas fa-users mr-1"></i> Characters</a></li>
+                    <li><a href="../play/" class="hover:text-yellow-400 transition duration-300"><i class="fas fa-play mr-1"></i> Play Sprunki</a></li>
+                    <li><a href="../mod/" class="hover:text-yellow-400 transition duration-300"><i class="fas fa-play mr-2"></i> Mod</a></li>
+                    <li><a href="../download/" class="hover:text-yellow-400 transition duration-300"><i class="fas fa-download mr-1"></i> Download</a></li>
+                    <li><a href="../sprunki-characters/" class="hover:text-yellow-400 transition duration-300" title="Sprunki Characters"><i class="fas fa-users mr-1"></i> Characters</a></li>
                 </ul>
                 <div class="burger md:hidden cursor-pointer">
-                    <div class="line1 bg-white h-1 w-6 my-1"></div>
-                    <div class="line2 bg-white h-1 w-6 my-1"></div>
-                    <div class="line3 bg-white h-1 w-6 my-1"></div>
+                    <div class="line1 bg-white h-0.5 w-6 my-1 transition duration-300"></div>
+                    <div class="line2 bg-white h-0.5 w-6 my-1 transition duration-300"></div>
+                    <div class="line3 bg-white h-0.5 w-6 my-1 transition duration-300"></div>
                 </div>
             </nav>
         </div>
     </header>
 
+    <!-- 移动端导航菜单 -->
+    <div class="mobile-nav fixed top-0 left-0 w-full h-screen bg-red-900 z-40 transform -translate-x-full transition duration-300 ease-in-out">
+        <ul class="flex flex-col items-center justify-center h-full space-y-8 text-white text-2xl">
+            <li><a href="../play/" class="hover:text-yellow-400 transition duration-300"><i class="fas fa-play mr-2"></i>Play Sprunki</a></li>
+            <li><a href="../mod/" class="hover:text-yellow-400 transition duration-300"><i class="fas fa-play mr-2"></i>Mod</a></li>
+            <li><a href="../download/" class="hover:text-yellow-400 transition duration-300"><i class="fas fa-download mr-2"></i>Download</a></li>
+            <li><a href="../sprunki-characters/" class="hover:text-yellow-400 transition duration-300"><i class="fas fa-users mr-2"></i>Characters</a></li>
+        </ul>
+    </div>
+
     <main class="pt-20">
         <!-- Recommended Games Section -->
         <section id="related-games" class="bg-gray-100 py-16">
             <div class="container mx-auto px-4">
-
                 <h1 class="text-5xl font-bold text-center mb-4 text-red-800">Sprunki Mod – Play Instantly Online for Free</h1>
                 <h2 class="text-3xl font-semibold text-center mb-8 text-gray-700">Jump into the World of Sprunki Mod and Play Now!</h2>
                 <p class="text-xl text-center mb-10 text-gray-600 max-w-3xl mx-auto">Discover the world of Sprunki Mod, a fan-favorite modification of the rhythm game Sprunki. Experience everything Sprunki Mod has to offer directly on our site—no need to download or install anything. Dive into the fun, challenge your rhythm skills, and play instantly!</p>
@@ -95,6 +98,20 @@
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold mb-2 text-red-700">Dandy's World</h3>
                             <p class="text-gray-600">Mix beats in a creepy yet captivating world!</p>
+                        </div>
+                    </a>
+                    <a href="../sprunki-abgerny/" class="bg-white rounded-2xl overflow-hidden shadow-lg transition duration-300 hover:shadow-2xl hover:-translate-y-2">
+                        <img src="../img/sprunki-abgerny.png" alt="Sprunki Abgerny" class="w-full h-48 object-cover">
+                        <div class="p-6">
+                            <h3 class="text-2xl font-semibold mb-2 text-red-700">Sprunki Abgerny</h3>
+                            <p class="text-gray-600">New sounds & characters!</p>
+                        </div>
+                    </a>
+                    <a href="../sprunki-fnf/" class="bg-white rounded-2xl overflow-hidden shadow-lg transition duration-300 hover:shadow-2xl hover:-translate-y-2">
+                        <img src="../img/sprunki-fnf.jpg" alt="Sprunki fnf" class="w-full h-48 object-cover">
+                        <div class="p-6">
+                            <h3 class="text-2xl font-semibold mb-2 text-red-700">Sprunki fnf</h3>
+                            <p class="text-gray-600">Friday Night Funkin'!</p>
                         </div>
                     </a>
                 </div>
@@ -210,11 +227,11 @@
         </section>
 
         <!-- Ready to Play Section -->
-        <section class="ready-to-play bg-gradient-to-r from-red-800 to-red-900 text-white py-20" id="ready-to-play">
+        <section class="bg-gradient-to-r from-red-800 to-red-900 text-white py-20" id="ready-to-play">
             <div class="container mx-auto px-4 text-center">
                 <h2 class="text-5xl font-bold mb-6">Explore Sprunki Mod Now!</h2>
                 <p class="text-xl mb-10 max-w-2xl mx-auto">Are you ready to challenge your rhythm skills with the vibrant and fun Sprunki Mod? Don't wait—click the Play Now button and jump into the action!</p>
-                <a href="#related-games" class="bg-yellow-400 text-red-900 font-bold text-xl py-4 px-10 rounded-full hover:bg-yellow-300 transition duration-300 inline-block hover:shadow-lg transform hover:-translate-y-1">Play Sprunki Mod Now!</a>
+                <a href="#play-now" class="bg-yellow-400 text-red-900 font-bold text-xl py-4 px-10 rounded-full hover:bg-yellow-300 transition duration-300 inline-block hover:shadow-lg transform hover:-translate-y-1">Play Sprunki Mod Now!</a>
             </div>
         </section>
     </main>
@@ -233,10 +250,49 @@
                 <li><a href="../ko/" hreflang="ko" class="text-white hover:text-yellow-400 transition duration-300">한국</a></li>
                 <li><a href="../ru/" hreflang="ru" class="text-white hover:text-yellow-400 transition duration-300">Русский</a></li>
                 <li><a href="../pt/" hreflang="pt" class="text-white hover:text-yellow-400 transition duration-300">Português</a></li>
+                <li><a href="https://sdimg.ai/" target="_blank" class="text-white hover:text-yellow-400 transition duration-300">Stable Diffusion 3.5</a></li>
             </ul>
         </div>
     </footer>
 
+    <script type="module">
+        import { enterFullscreen, exitFullscreen, handleFullscreenChange, autoEnterFullscreen } from '../fullscreen.js';
+
+        const gameContainer = document.getElementById('game-container');
+        const gameIframe = document.getElementById('game-iframe');
+        const fullscreenBtn = document.getElementById('fullscreen-btn');
+        const exitFullscreenBtn = document.getElementById('exit-fullscreen-btn');
+        const domainWatermark = document.getElementById('domain-watermark');
+
+        fullscreenBtn.addEventListener('click', () => enterFullscreen(gameContainer, gameIframe, fullscreenBtn, exitFullscreenBtn, domainWatermark));
+        exitFullscreenBtn.addEventListener('click', () => exitFullscreen(gameContainer, gameIframe, fullscreenBtn, exitFullscreenBtn, domainWatermark));
+        document.addEventListener('fullscreenchange', () => handleFullscreenChange(gameContainer, gameIframe, fullscreenBtn, exitFullscreenBtn, domainWatermark));
+
+        // Auto enter fullscreen on mobile devices in portrait mode
+        window.addEventListener('load', () => autoEnterFullscreen(gameContainer, gameIframe, fullscreenBtn, exitFullscreenBtn, domainWatermark));
+        window.addEventListener('resize', () => autoEnterFullscreen(gameContainer, gameIframe, fullscreenBtn, exitFullscreenBtn, domainWatermark));
+
+        // 汉堡按钮功能
+        const burger = document.querySelector('.burger');
+        const mobileNav = document.querySelector('.mobile-nav');
+        const body = document.body;
+
+        burger.addEventListener('click', () => {
+            mobileNav.classList.toggle('-translate-x-full');
+            body.classList.toggle('overflow-hidden');
+            burger.classList.toggle('active');
+        });
+
+        // 汉堡按钮动画
+        burger.addEventListener('click', () => {
+            burger.classList.toggle('active');
+            burger.children[0].classList.toggle('rotate-45');
+            burger.children[0].classList.toggle('translate-y-1.5');
+            burger.children[1].classList.toggle('opacity-0');
+            burger.children[2].classList.toggle('-rotate-45');
+            burger.children[2].classList.toggle('-translate-y-1.5');
+        });
+    </script>
 </body>
 
 </html>
