--- a/play/index.html
+++ b/play/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body class="bg-gradient-to-r from-gray-100 to-gray-200 text-gray-800 font-sans leading-relaxed">
-    <header class="bg-gradient-to-r from-red-800 to-red-900 text-white py-6 fixed top-0 left-0 w-full z-50 shadow-lg">
+    <header class="bg-gradient-to-r from-red-800 to-red-900 text-white py-4 fixed top-0 left-0 w-full z-50 shadow-lg">
         <div class="container mx-auto px-4">
             <nav class="flex justify-between items-center">
                 <div class="logo">
@@ -33,89 +33,112 @@
                 </div>
                 <ul class="nav-links hidden md:flex space-x-6">
                     <li><a href="#play-now" class="hover:text-yellow-400 transition duration-300"><i class="fas fa-play mr-1"></i> Play Sprunki</a></li>
+                    <li><a href="../mod/" class="hover:text-yellow-400 transition duration-300"><i class="fas fa-play mr-1"></i> Mod</a></li>
                     <li><a href="../download/" class="hover:text-yellow-400 transition duration-300"><i class="fas fa-download mr-1"></i> Download</a></li>
-                    <li><a href="../neesterversal-v3-incredibox/" class="hover:text-yellow-400 transition duration-300" title="Play Neesterversal"><i class="fas fa-play mr-1"></i> Neesterversal V3</a></li>
-                    <li><a href="../gray-sprunki/" class="hover:text-yellow-400 transition duration-300" title="Play Gray Sprunki"><i class="fas fa-play mr-1"></i> Gray Sprunki</a></li>
-                    <li><a href="../sprunki-oc/" class="hover:text-yellow-400 transition duration-300" title="Play Sprunki OC"><i class="fas fa-play mr-1"></i> Sprunki OC</a></li>
                     <li><a href="../sprunki-characters/" class="hover:text-yellow-400 transition duration-300" title="Sprunki Characters"><i class="fas fa-users mr-1"></i> Characters</a></li>
                 </ul>
                 <div class="burger md:hidden cursor-pointer">
-                    <div class="line1 bg-white h-1 w-6 my-1"></div>
-                    <div class="line2 bg-white h-1 w-6 my-1"></div>
-                    <div class="line3 bg-white h-1 w-6 my-1"></div>
+                    <div class="line1 bg-white h-0.5 w-6 my-1 transition duration-300"></div>
+                    <div class="line2 bg-white h-0.5 w-6 my-1 transition duration-300"></div>
+                    <div class="line3 bg-white h-0.5 w-6 my-1 transition duration-300"></div>
                 </div>
             </nav>
         </div>
     </header>
 
-    <main class="pt-20">
-        <!-- Main Game Section with iframe -->
-        <section id="play-now" class="bg-white py-16">
-            <div class="container mx-auto px-4">
-                <h1 class="text-5xl font-bold text-center mb-4 text-red-800">Play Sprunki Incredibox Online</h1>
-                <h2 class="text-3xl font-semibold text-center mb-8 text-gray-700">Your Free Music-Mixing Experience!</h2>
-                
-                <div class="game-container relative w-full max-w-4xl mx-auto">
-                    <iframe id="game-iframe" src="https://s.sprunkiincredibox.com/game/sprunki/index.html" frameborder="0" class="w-full h-[600px] rounded-lg shadow-2xl"></iframe>
-                    <button id="fullscreen-btn" class="absolute bottom-4 right-4 bg-black bg-opacity-60 text-white border-none py-2 px-4 rounded cursor-pointer text-sm transition duration-300 hover:bg-opacity-80 flex items-center">
-                        <i class="fas fa-expand mr-2"></i> Fullscreen
-                    </button>
-                    <button id="exit-fullscreen-btn" class="fixed top-4 right-4 bg-black bg-opacity-60 text-white border-none py-2 px-4 rounded cursor-pointer text-sm z-50 hidden">
-                        <i class="fas fa-compress mr-2"></i> Exit
-                    </button>
-                    <a href="https://sprunkiincredibox.com/" id="domain-watermark" class="absolute top-1/2 right-0 transform rotate-90 translate-y-[-50%] text-white hidden">SprunkiIncredibox.com</a>
-                </div>
-            </div>
-        </section>
+    <!-- 移动端导航菜单 -->
+    <div class="mobile-nav fixed top-0 left-0 w-full h-screen bg-red-900 z-40 transform -translate-x-full transition duration-300 ease-in-out">
+        <ul class="flex flex-col items-center justify-center h-full space-y-8 text-white text-2xl">
+            <li><a href="#play-now" class="hover:text-yellow-400 transition duration-300"><i class="fas fa-play mr-2"></i> Play Sprunki</a></li>
+            <li><a href="../download/" class="hover:text-yellow-400 transition duration-300"><i class="fas fa-download mr-2"></i> Download</a></li>
+            <li><a href="../mod/" class="hover:text-yellow-400 transition duration-300"><i class="fas fa-play mr-2"></i> Mod</a></li>
+            <li><a href="../sprunki-characters/" class="hover:text-yellow-400 transition duration-300"><i class="fas fa-users mr-2"></i> Characters</a></li>
+        </ul>
+    </div>
 
-        <!-- Recommended Games Section -->
-        <section id="related-games" class="bg-gray-100 py-16">
+    <main class="pt-16">
+        <!-- Main Game Section with iframe -->
+        <section id="play-now" class="bg-white py-8">
             <div class="container mx-auto px-4">
-                <h2 class="text-4xl font-bold text-center mb-12 text-red-800">Explore More Musical Adventures</h2>
-                <p class="text-xl text-center mb-10 text-gray-600 max-w-3xl mx-auto">Discover other exciting music creation games in the Incredibox universe!</p>
-                <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
-                    <a href="../neesterversal-v3-incredibox/" class="bg-white rounded-2xl overflow-hidden shadow-lg transition duration-300 hover:shadow-2xl hover:-translate-y-2">
-                        <img src="https://s.sprunkiincredibox.com/img/neesterversal.png" alt="Neesterversal v3 Incredibox" class="w-full h-48 object-cover">
-                        <div class="p-6">
-                            <h3 class="text-2xl font-semibold mb-2 text-red-700">Neesterversal v3 Incredibox</h3>
-                            <p class="text-gray-600">A musical journey with 20 unique Neesters!</p>
+                <div class="flex flex-col lg:flex-row gap-8">
+                    <!-- Game Container -->
+                    <div class="lg:w-2/3">
+                        <h1 class="text-4xl font-bold text-center mb-4 text-red-800">Play Sprunki Incredibox Online</h1>
+                        <h2 class="text-2xl font-semibold text-center mb-8 text-gray-700">Your Free Music-Mixing Experience!</h2>
+                        <div class="game-container relative w-full max-w-4xl mx-auto">
+                            <iframe id="game-iframe" src="https://s.sprunkiincredibox.com/game/sprunki/index.html" frameborder="0" class="w-full h-[600px] rounded-lg shadow-2xl"></iframe>
+                            <button id="fullscreen-btn" class="absolute bottom-4 right-4 bg-black bg-opacity-60 text-white border-none py-2 px-4 rounded cursor-pointer text-sm transition duration-300 hover:bg-opacity-80 flex items-center">
+                                <i class="fas fa-expand mr-2"></i> Fullscreen
+                            </button>
+                            <button id="exit-fullscreen-btn" class="fixed top-4 right-4 bg-black bg-opacity-60 text-white border-none py-2 px-4 rounded cursor-pointer text-sm z-50 hidden">
+                                <i class="fas fa-compress mr-2"></i> Exit
+                            </button>
+                            <a href="https://sprunkiincredibox.com/" id="domain-watermark" class="absolute top-1/2 right-0 transform rotate-90 translate-y-[-50%] text-white hidden">SprunkiIncredibox.com</a>
                         </div>
-                    </a>
-                    <a href="../gray-sprunki/" class="bg-white rounded-2xl overflow-hidden shadow-lg transition duration-300 hover:shadow-2xl hover:-translate-y-2">
-                        <img src="https://s.sprunkiincredibox.com/img/gray-sprunki.png" alt="Gray Sprunki Incredibox" class="w-full h-48 object-cover">
-                        <div class="p-6">
-                            <h3 class="text-2xl font-semibold mb-2 text-red-700">Gray Sprunki Incredibox</h3>
-                            <p class="text-gray-600">The Cool Cat of Incredibox Universe</p>
+                    </div>
+                    
+                    <!-- Explore More Section -->
+                    <div class="lg:w-1/3">
+                        <h2 class="text-4xl font-bold text-center mb-20 text-red-800">Explore More</h2>
+                        <div class="grid grid-cols-2 gap-4">
+                            <a href="../neesterversal-v3-incredibox/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
+                                <img src="../img/neesterversal.png" alt="Neesterversal v3 Incredibox" class="w-full h-24 object-cover">
+                                <div class="p-2">
+                                    <h3 class="text-sm font-semibold mb-1 text-red-700">Neesterversal v3</h3>
+                                    <p class="text-xs text-gray-600">20 Unique Neesters!</p>
+                                </div>
+                            </a>
+                            <a href="../gray-sprunki/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
+                                <img src="../img/gray-sprunki.png" alt="Gray Sprunki Incredibox" class="w-full h-24 object-cover">
+                                <div class="p-2">
+                                    <h3 class="text-sm font-semibold mb-1 text-red-700">Gray Sprunki</h3>
+                                    <p class="text-xs text-gray-600">Cool Cat of Incredibox</p>
+                                </div>
+                            </a>
+                            <a href="../sprunki-oc/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
+                                <img src="../img/sprunki-oc.png" alt="Sprunki OC" class="w-full h-24 object-cover">
+                                <div class="p-2">
+                                    <h3 class="text-sm font-semibold mb-1 text-red-700">Sprunki OC</h3>
+                                    <p class="text-xs text-gray-600">Original characters!</p>
+                                </div>
+                            </a>
+                            <a href="../sprunki-dandys-world/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
+                                <img src="../img/dandys-world.png" alt="Sprunki Dandy's World" class="w-full h-24 object-cover">
+                                <div class="p-2">
+                                    <h3 class="text-sm font-semibold mb-1 text-red-700">Dandy's World</h3>
+                                    <p class="text-xs text-gray-600">Creepy yet captivating!</p>
+                                </div>
+                            </a>
+                            <a href="../sprunki-characters/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
+                                <img src="../img/sprunki-characters.png" alt="Sprunki Characters" class="w-full h-24 object-cover">
+                                <div class="p-2">
+                                    <h3 class="text-sm font-semibold mb-1 text-red-700">Sprunki Characters</h3>
+                                    <p class="text-xs text-gray-600">Meet the quirky cast!</p>
+                                </div>
+                            </a>
+                            <a href="../sprunki-abgerny/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
+                                <img src="../img/sprunki-abgerny.png" alt="Sprunki Abgerny" class="w-full h-24 object-cover">
+                                <div class="p-2">
+                                    <h3 class="text-sm font-semibold mb-1 text-red-700">Sprunki Abgerny</h3>
+                                    <p class="text-xs text-gray-600">New sounds & characters!</p>
+                                </div>
+                            </a>
+                            <a href="../sprunki-fnf/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
+                                <img src="../img/sprunki-fnf.jpg" alt="Sprunki fnf" class="w-full h-24 object-cover">
+                                <div class="p-2">
+                                    <h3 class="text-sm font-semibold mb-1 text-red-700">Sprunki fnf</h3>
+                                    <p class="text-xs text-gray-600">Friday Night Funkin'!</p>
+                                </div>
+                            </a>
+                            <a href="../" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
+                                <img src="../img/sprunki.png" alt="Sprunki Incredibox" class="w-full h-24 object-cover">
+                                <div class="p-2">
+                                    <h3 class="text-sm font-semibold mb-1 text-red-700">Sprunki Incredibox</h3>
+                                    <p class="text-xs text-gray-600">Create spunky beats!</p>
+                                </div>
+                            </a>
                         </div>
-                    </a>
-                    <a href="../sprunki-oc/" class="bg-white rounded-2xl overflow-hidden shadow-lg transition duration-300 hover:shadow-2xl hover:-translate-y-2">
-                        <img src="../img/sprunki-oc.png" alt="Sprunki OC" class="w-full h-48 object-cover">
-                        <div class="p-6">
-                            <h3 class="text-2xl font-semibold mb-2 text-red-700">Sprunki OC</h3>
-                            <p class="text-gray-600">Create music with original characters!</p>
-                        </div>
-                    </a>
-                    <a href="../dandys-world/" class="bg-white rounded-2xl overflow-hidden shadow-lg transition duration-300 hover:shadow-2xl hover:-translate-y-2">
-                        <img src="../img/dandys-world.png" alt="Sprunki Dandy's World" class="w-full h-48 object-cover">
-                        <div class="p-6">
-                            <h3 class="text-2xl font-semibold mb-2 text-red-700">Dandy's World</h3>
-                            <p class="text-gray-600">Mix beats in a creepy yet captivating world!</p>
-                        </div>
-                    </a>
-                    <a href="../abgerny/" class="bg-white rounded-2xl overflow-hidden shadow-lg transition duration-300 hover:shadow-2xl hover:-translate-y-2">
-                        <img src="../img/abgerny.png" alt="Sprunki Abgerny" class="w-full h-48 object-cover">
-                        <div class="p-6">
-                            <h3 class="text-2xl font-semibold mb-2 text-red-700">Sprunki Abgerny</h3>
-                            <p class="text-gray-600">Explore new sounds and characters!</p>
-                        </div>
-                    </a>
-                    <a href="../fnf/" class="bg-white rounded-2xl overflow-hidden shadow-lg transition duration-300 hover:shadow-2xl hover:-translate-y-2">
-                        <img src="../img/fnf.jpg" alt="Sprunki fnf" class="w-full h-48 object-cover">
-                        <div class="p-6">
-                            <h3 class="text-2xl font-semibold mb-2 text-red-700">Sprunki fnf</h3>
-                            <p class="text-gray-600">Experience the rhythm of Friday Night Funkin'!</p>
-                        </div>
-                    </a>
+                    </div>
                 </div>
             </div>
         </section>
