更新页面链接

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </ul>
     </div>
 
-    <main class="pt-16">
+    <main class="pt-14">
 
         <!-- Hero Section -->
         <section class="bg-gradient-to-r from-red-700 to-red-900 text-white py-10">
@@ -126,24 +126,24 @@
                                     <p class="text-xs text-gray-600">Meet the quirky cast!</p>
                                 </div>
                             </a>
-                            <a href="./sprunki-dandys-world/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
+                            <a href="./dandys-world/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
                                 <img src="./img/dandys-world.png" alt="Sprunki Dandy's World" class="w-full h-24 object-cover">
                                 <div class="p-2">
                                     <h3 class="text-sm font-semibold mb-1 text-red-700">Dandy's World</h3>
                                     <p class="text-xs text-gray-600">Creepy yet captivating!</p>
                                 </div>
                             </a>
-                            <a href="./sprunki-abgerny/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
+                            <a href="./abgerny/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
                                 <img src="./img/sprunki-abgerny.png" alt="Sprunki Abgerny" class="w-full h-24 object-cover">
                                 <div class="p-2">
                                     <h3 class="text-sm font-semibold mb-1 text-red-700">Sprunki Abgerny</h3>
                                     <p class="text-xs text-gray-600">New sounds & characters!</p>
                                 </div>
                             </a>
-                            <a href="./sprunki-fnf/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
+                            <a href="./fnf/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
                                 <img src="./img/sprunki-fnf.jpg" alt="Sprunki fnf" class="w-full h-24 object-cover">
                                 <div class="p-2">
-                                    <h3 class="text-sm font-semibold mb-1 text-red-700">Sprunki fnf</h3>
+                                    <h3 class="text-sm font-semibold mb-1 text-red-700">Sprunki FNF</h3>
                                     <p class="text-xs text-gray-600">Friday Night Funkin'!</p>
                                 </div>
                             </a>
