添加新增网站入口

--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
                         <h2 class="text-4xl font-bold text-center mb-2 text-red-800">Explore More Musical Adventures</h2>
                         <p class="text-xl text-center mb-10 text-gray-600 max-w-3xl mx-auto hidden">Discover other exciting music creation games in the Incredibox universe!</p>
                         <div class="grid grid-cols-2 gap-4">
-                            <a href="./" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
+                            <!-- <a href="./" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
                                 <img src="./img/sprunki.png" alt="Sprunki Incredibox" class="w-full h-24 object-cover">
                                 <div class="p-2">
                                     <h3 class="text-sm font-semibold mb-1 text-red-700">Sprunki Incredibox</h3>
                                     <p class="text-xs text-gray-600">Create spunky beats!</p>
                                 </div>
-                            </a>
+                            </a> -->
                             <a href="./neesterversal-v3-incredibox/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
                                 <img src="./img/neesterversal.png" alt="Neesterversal v3 Incredibox" class="w-full h-24 object-cover">
                                 <div class="p-2">
@@ -145,6 +145,13 @@
                                 <div class="p-2">
                                     <h3 class="text-sm font-semibold mb-1 text-red-700">Sprunki FNF</h3>
                                     <p class="text-xs text-gray-600">Friday Night Funkin'!</p>
+                                </div>
+                            </a>
+                            <a href="./sprunked/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
+                                <img src="./img/sprunked.jpg" alt="sprunked" class="w-full h-24 object-cover">
+                                <div class="p-2">
+                                    <h3 class="text-sm font-semibold mb-1 text-red-700">Sprunked</h3>
+                                    <p class="text-xs text-gray-600">Discover the Latest Sprunki Incredibox Mod</p>
                                 </div>
                             </a>
                         </div>
