--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
                                     <p class="text-xs text-gray-600">Original characters!</p>
                                 </div>
                             </a>
-                            <a href="./sprunki-characters/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
+                            <!-- <a href="./sprunki-characters/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
                                 <img src="./img/sprunki-characters.png" alt="Sprunki Characters" class="w-full h-24 object-cover">
                                 <div class="p-2">
                                     <h3 class="text-sm font-semibold mb-1 text-red-700">Sprunki Characters</h3>
                                     <p class="text-xs text-gray-600">Meet the quirky cast!</p>
                                 </div>
-                            </a>
+                            </a> -->
                             <a href="./dandys-world/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
                                 <img src="./img/dandys-world.png" alt="Sprunki Dandy's World" class="w-full h-24 object-cover">
                                 <div class="p-2">
@@ -152,6 +152,13 @@
                                 <div class="p-2">
                                     <h3 class="text-sm font-semibold mb-1 text-red-700">Sprunked</h3>
                                     <p class="text-xs text-gray-600">Discover the Latest Sprunki Incredibox Mod</p>
+                                </div>
+                            </a>
+                            <a href="./remastered/" class="bg-white rounded-lg overflow-hidden shadow-md transition duration-300 hover:shadow-xl hover:-translate-y-1">
+                                <img src="./img/remastered.webp" alt="Sprunki remastered" class="w-full h-24 object-cover">
+                                <div class="p-2">
+                                    <h3 class="text-sm font-semibold mb-1 text-red-700">Sprunki remastered</h3>
+                                    <p class="text-xs text-gray-600">Experience the remastered Friday Night Funkin'!</p>
                                 </div>
                             </a>
                         </div>
